Created the Manager, SuperManager, and Password Validator test classes.